<resources>
    <string name="app_name">EventikaProject</string>
    <integer name="com_vk_sdk_AppId">5446285</integer>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="event_board">Доска мероприятий</string>
    <string name="favorites">Избранные</string>
    <string name="group_add">Подписки</string>
    <string name="notifications">Уведомления</string>
    <string name="lasts">Последние</string>

    <string name="block_event_param_one">Адресс:</string>
    <string name="block_event_param_two">Дата начала:</string>
    <string name="block_event_param_three">Дата конца:</string>

    <array name="months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </array>

    <string name="years">года</string>

    <string name="error_connection">Ошибка! Проверьте интернет соеденение.</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_setting">Настройки</string>

    <string name="ready">Готово</string>

    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>

    <string name="filtering">Фильтрация мероприятий:</string>
    <string name="social_network">Социальные сети:</string>
    <string name="contact_information">Контактная информация:</string>

    <string name="field_interest">Сферы интересов</string>
    <string name="citys">Города</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="auth">Авторизироваться</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="number_phone">Номер телефона</string>

    <string name="vk">Профиль "Вконтакте"</string>
    <string name="facebook">Профиль "FaceBook"</string>

    <string name="offer_to_log_text">Что бы редактировать профиль, авторизируйтесь(зарегестрируйтесь)</string>
    <string name="offer_to_log_button">Авторизироваться</string>
    <string name="title_activity_login">Sign in</string>

    <string name="error_email_not_right">Не корректный email</string>
    <string name="error_email_small">Слишком короткий email</string>
    <string name="error_password">Слишком короткий пароль</string>
    <string name="error_confirm_password">Пароли не совпадают</string>

    <string name="write_to_field">Заполните поле</string>

</resources>
