<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/event_board"
            android:icon="@drawable/ic_event_board_24dp"
            android:title="@string/event_board" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorites_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/group_add"
            android:icon="@drawable/ic_group_add_24dp"
            android:title="@string/group_add" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/lasts">
        <menu>
            <item android:id="@+id/last_event1"
                android:title=""
                app:actionLayout="@layout/drawer_menu"
                app:showAsAction="always" />
        </menu>

    </item>

</menu>
