<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_medium"
                    android:orientation="horizontal">

                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/default_avatar"
                        app:siBorderColor="#ffffff"
                        app:siBorderWidth="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="@string/filtering"
                        android:textColor="@color/title_item_setting" />

                    <corp.is3.eventikaproject.customview.ItemSettingArrow
                        android:id="@+id/select_field_interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:nameItm="@string/field_interest">

                    </corp.is3.eventikaproject.customview.ItemSettingArrow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line" />

                    <corp.is3.eventikaproject.customview.ItemSettingArrow
                        android:id="@+id/select_citys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:nameItm="@string/citys">

                    </corp.is3.eventikaproject.customview.ItemSettingArrow>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="@string/social_network"
                        android:textColor="@color/title_item_setting" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginRight="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:hint="@string/vk"
                        android:inputType="textPersonName" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginRight="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:hint="@string/facebook"
                        android:inputType="textPersonName" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="@string/contact_information"
                        android:textColor="@color/title_item_setting" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginRight="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_medium"
                        android:layout_marginRight="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_small"
                        android:hint="@string/number_phone"
                        android:inputType="phone" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>