<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    app:siShape="@drawable/shape_rectangle_image_card_event"
                    app:siSquare="false"
                    android:id="@+id/image_event_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/menu_background" />

                <TextView
                    android:id="@+id/name_event_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/padding_small"
                    android:text="Hello"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/event_name_size" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/favorite_button_event_card"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_star_not_fill24dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/block_event_param_one"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_param_one"
                        android:text="г.Москва, ул.Большая Лубянка, дом 1/3" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/block_event_param_two"
                        android:textStyle="bold" />

                    <corp.is3.eventikaproject.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_param_two"
                        android:text="24 июня 2016 года"
                        app:font="Roboto-Regular.ttf"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/block_event_param_three"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_param_three"
                        android:text="26 июня 2016 года" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>